# template

./: .env  README.md  docker-compose.yaml  pyproject.toml
backend/: .coverage  Dockerfile  alembic.ini  celery_worker.py  database.py  main.py  pyproject.toml  test.py
backend/alembic/: env.py
backend/alembic/versions/: 275b47d1d90c_initial_migration.py  f3b734a7ba6b_initial_migration.py
backend/api/crud/: user.py
backend/api/schemas/: user.py
backend/api/tests/: test_template.py
backend/compose/: Dockerfile
backend/compose/scripts/: start_api  start_beat  start_flower
backend/crud/: __init__.py  user.py
backend/models/: user.py
backend/schemas/: __init__.py
backend/scripts/: clean_pycache.sh  coverage.sh  run.sh
