[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["caio pilon <caiofpilon@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.79"
uvicorn = "^0.18"
SQLAlchemy = "^1.4"
psycopg2-binary = "^2.9"
python-dotenv = "^0.20"
celery = "^5.2"
flower = "^1.2"
redis = "^4.3"
alembic = "^1.8"

[tool.poetry.dev-dependencies]
coverage = "^6.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
